--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2001-11-12  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.c (shift_alg_qi): New.
+	(shift_alg_hi): Likewise.
+	(shift_alg_si): Likewise.
+	(get_shift_alg): Change the type of count to unsigned int.
+	Use the tables.
+
 2001-11-11  Alexandre Oliva  <aoliva@redhat.com>
 
 	* Makefile.in (c-lang.o): Depend on $(VARRAY_H).
