--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-12  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* boehm.cc (_Jv_GCCanReclaimSoftReference): Fix warning.
+
 2001-11-09  Jeff Sturm  <jsturm@one-point.com>
 
 	* verify.cc: Wrap in #ifdef INTERPRETER...#endif.
