--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* dbxout.c (dbxout_symbol_location): Avoid emitting invalid register
+	numbers.
+
 Mon Nov 12 05:18:42 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* emit-rtl.c (set_mem_attributes): If making object, can set alignment
