--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-12  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.c (get_shift_alg): Remove redundant code.
+
 2001-11-12  Jakub Jelinek  <jakub@redhat.com>
 
 	* dbxout.c (dbxout_symbol_location): Avoid emitting invalid register
