* doc/gcc.texi: Move several chapters out to ... 	* doc/configterms.texi, doc/fragments.texi, doc/hostconfig.texi, 	doc/include/linux-and-gnu.texi, doc/interface.texi, 	doc/makefile.texi, doc/passes.texi, doc/portability.texi: 	... here.  New files. 	* doc/gcc.texi, doc/contrib.texi: Move section headings into 	contrib.texi. 	* Makefile.in ($(docdir)/gcc.info, gcc.dvi): Update dependencies.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46951 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/contrib.texi
+++ b/gcc/doc/contrib.texi
@@ -3,6 +3,10 @@
 @c This is part of the GCC manual.
 @c For copying conditions, see the file gcc.texi.
 
+@node Contributors
+@unnumbered Contributors to GCC
+@cindex contributors
+
 The GCC project would like to thank its many contributors.  Without them the
 project would not have been nearly as successful as it has been.  Any omissions
 in this list are accidental.  Feel free to contact
