--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-12  David O'Brien  <obrien@FreeBSD.org>
+
+	* config/ia64/freebsd.h: Fix misspelling.
+
 2001-11-12  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* doc/gcc.texi: Move several chapters out to ...
