--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-12  David O'Brien  <obrien@FreeBSD.org>
+
+	* MAINTAINERS: mcore, cris and mmix are also CPU ports.
+
 2001-11-11  David O'Brien  <obrien@FreeBSD.org>
 
 	* MAINTAINERS: Alphabetize.
