--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-12  H.J. Lu <hjl@gnu.org>
+
+	* cp/cvt.c (ocp_convert): Don't warn the address of a weak
+	function is always `true'.
+
 2001-11-09  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cp-lang.c (LANG_HOOKS_PRINT_DECL, LANG_HOOKS_PRINT_TYPE,
