--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,12 @@
 2001-11-12  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300.c (shift_alg_si): Use special code for
+	15-bit logical shifts and 31-bit logical shifts.
+	(get_shift_alg): Generate special code for 15-bit and 31-bit
+	logical shifts.
+
+2001-11-12  Kazu Hirata  <kazu@hxi.com>
+
 	* config/h8300/h8300.c (shift_alg_qi): Use rotations when
 	doing 6-bit logical shifts on H8/S.
 	(shift_alg_qi): Use special code for 21-bit shifts on H8/S.
