2001-11-12  David O'Brien  <obrien@FreeBSD.org> 	* MAINTAINERS: mips and s390 are also CPU ports.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46966 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-11-12  David O'Brien  <obrien@FreeBSD.org>
 
+	* MAINTAINERS: mips and s390 are also CPU ports.
+
+2001-11-12  David O'Brien  <obrien@FreeBSD.org>
+
 	* MAINTAINERS: mcore, cris and mmix are also CPU ports.
 
 2001-11-11  David O'Brien  <obrien@FreeBSD.org>
