* doc/standards.texi: Mention C99 TC1.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46968 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-12  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* doc/standards.texi: Mention C99 TC1.
+
 2001-11-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* mips-protos.h (mips_output_conditional_branch): Const-ify.
