* MAINTAINERS (Write After Approval): Add self.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46973 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-12  Craig Rodrigues  <rodrigc@gcc.gnu.org>
+
+	* MAINTAINERS (Write After Approval): Add self.
+
 2001-11-12  David O'Brien  <obrien@FreeBSD.org>
 
 	* MAINTAINERS: mips and s390 are also CPU ports.
