--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-13  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* Makefile.in (cfgcleanup.o): Depend on insn-config.h
+
 2001-11-12  Craig Rodrigues  <rodrigc@gcc.gnu.org>
 
 	PR bootstrap/3451
