--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-13  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR g++/4206
+	* parse.y (already_scoped_stmt): Remove.
+	(simple_stmt, WHILE & FOR): Use implicitly_scoped_stmt.
+
 2001-11-12  H.J. Lu <hjl@gnu.org>
 
 	* cp/cvt.c (ocp_convert): Don't warn the address of a weak
