--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-13  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/other/forscope1.C: New test.
+	* g++.dg/ext/forscope1.C: New test.
+	* g++.dg/ext/forscope2.C: New test.
+
 2001-11-13  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/execute/20011113-1.c: New test.
