--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-13  DJ Delorie  <dj@redhat.com>
+
+	* config.gcc (powerpc|rs6000): Set default cpp options based
+	on --with-cpu settings.
+	* config/rs6000/softfloat.h: New.
+
 2001-11-13  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.c (shift_alg_si): Use special code for
