--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2001-11-13  Tom Tromey  <tromey@redhat.com>
+
+	Fix for PR libgcj/4859:
+	* java/util/Timer.java (TaskQueue.isStopped): New method.
+	(Scheduler.run): Don't re-schedule task if queue has been
+	stopped.
+
 2001-11-07  Tom Tromey  <tromey@redhat.com>
 
 	* Makefile.in: Rebuilt.
