--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-13  Richard Henderson  <rth@redhat.com>
+
+	* loop.c (combine_movables): Turn off combination until
+	move_movables validation bugs are fixed.
+
 2001-11-13  DJ Delorie  <dj@redhat.com>
 
 	* config.gcc (powerpc|rs6000): Set default cpp options based
