--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-14  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* Make-lang.in: Change all uses of $(manext) to $(man1ext).
+
 2001-11-14  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* g77.1: Remove from CVS.
