* gjavah.c (method_signature): New global. 	(HANDLE_METHOD): Set it. 	(decompile_return_statement): New function. 	(decompile_method): Use it. 	(print_method_info): Removed `synth' argument.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46999 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,11 @@
+2001-11-13  Tom Tromey  <tromey@redhat.com>
+
+	* gjavah.c (method_signature): New global.
+	(HANDLE_METHOD): Set it.
+	(decompile_return_statement): New function.
+	(decompile_method): Use it.
+	(print_method_info): Removed `synth' argument.
+
 2001-11-09  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* java-tree.h (java_set_yydebug): New.
