* doc/install.texi (sparc-*-linux*): Mention requirements for 	binutils and glibc.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47000 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-13  Jeff Sturm  <jsturm@one-point.com>
+
+	* doc/install.texi (sparc-*-linux*): Mention requirements for
+	binutils and glibc.
+
 2001-11-14  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* Makefile.in (POD2MAN): Don't include --section=1.
