--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-14  Richard Sandiford  <rsandifo@redhat.com>
+
+	* g++.dg/init/array2.C: New test.
+
 2001-11-14  Alexandre Oliva  <aoliva@redhat.com>
 
 	* gcc.c-torture/execute/20010122-1.c: Prevent unwanted inlining.
