--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-14  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.c (get_shift_alg): Reorganize the code
+	that deals with 7-bit shifts in HImode.
+
 Wed Nov 14 14:17:05 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* dbxout.c (dbxout_symbol_location): Update call of alter_subreg.
