--- a/libobjc/ChangeLog
+++ b/libobjc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-14  Aldy Hernandez  <aldyh@redhat.com>
+
+        * encoding.c: Add target_flags.
+
 2001-11-07  Aldy Hernandez  <aldyh@redhat.com>
 
 	 * objc/objc-api.h (_C_VECTOR): New.
