--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,13 +1,16 @@
 2001-11-14  Tom Tromey  <tromey@redhat.com>
 
 	Re-merges with Classpath, from various people:
+	* java/lang/reflect/Modifier.java: Reindented.
+	(toString): Only trim trailing space if text was added to
+	StringBuffer.
+	* java/lang/reflect/ReflectPermission: Reindented.
+
+	Re-merges with Classpath, from various people:
 	* java/lang/Double.java (parseDouble): Fixed ordering of
 	modifiers.
 	* java/lang/reflect/AccessibleObject.java: Javadoc, reindented.
 	* java/lang/reflect/Member.java: Reindented.
-	* java/lang/reflect/Modifier.java: Reindented.
-	(toString): Only trim trailing space if text was added to
-	StringBuffer.
 	* java/util/ConcurrentModificationException.java: Javadoc
 	updates.
 	* java/util/EmptyStackException.java: Likewise.
