* gcc.c-torture/execute/string-opt-13.c: New testcase.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47030 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-14  Roger Sayle <roger@eyesopen.com>
+
+	* gcc.c-torture/execute/string-opt-13.c: New testcase.
+
 2001-11-14  Richard Sandiford  <rsandifo@redhat.com>
 
 	* g++.dg/init/array2.C: New test.
