2001-11-14  Toon Moene  <toon@moene.indiv.nluug.nl>
	* g77.texi: Update to use `@command', `@option.
	* invoke.texi: Ditto


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47034 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-14  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* g77.texi: Update to use `@command', `@option.
+	* invoke.texi: Ditto
+
 2001-11-14  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* Make-lang.in: Change all uses of $(manext) to $(man1ext).
